# VisualNovelTextToSpeach

./: .gitignore  README.md  main.py  pyproject.toml  test_img_to_text.ipynb
assignment/tests/: screenshot_test.py  test.py  voice_test.py
exps/: test_img_to_text.ipynb
tests/: voice_test.py
visual_novel_text_to_speech.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vntts/: __main__.py  main.py
vntts/services/: tts_engine.py
