[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-novel-text-to-speech"
version = "0.1.0"
description = "Desktop app for converting visual novel text to speech"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

authors = [
    { name = "Eugene" },
    { name = "Alex" },
]

dependencies = [
    "PySide6>=6.6",
    "pyttsx3>=2.90",
    "numpy>=1.24,<2.0",
    "pandas>=1.5,<2.0",
    "matplotlib>=3.9.4",
    "pytesseract>=0.3.13",
    "TTS>=0.22.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pyinstaller",
]

[tool.setuptools]
packages = []
